--- a/index.html
+++ b/index.html
@@ -68,7 +68,38 @@
         </div>
     </div>
 
-    
+    <script src="https://code.jquery.com/jquery-2.2.0.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/vue/1.0.16/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/vue.resource/0.7.0/vue-resource.min.js"></script>
+
+    <script>
+        var vm = new Vue({
+            el: "#app",
+            data: {
+                rawMarkdown: '# Github Markdown Editor\n A markdown editor and previewer with [**Github Markdown API**](https://developer.github.com/v3/markdown/). \n \n ## Credits \n1. [Github Markdown API](https://developer.github.com/v3/markdown/) \n2. [Vue.js](https://vuejs.org/)',
+                renderedMarkdown: ''
+            },
+            methods: {
+                renderPreview: function() {
+                    this.$http({
+                        url: 'https://api.github.com/markdown',
+                        method: 'POST',
+                        data: {text: this.rawMarkdown, mode: 'gfm'}
+                    }).then(function (response) {
+                        // successful callback
+                        this.renderedMarkdown = response.data;
+                    }, function (response) {
+                        // error callback
+                        console.log(response.data);
+                    });
+                },
+            },
+            created: function() {
+                this.renderPreview();
+            }
+        });
+    </script>
 </body>
 
 </html>
