--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-md-6">
+            <div class="col-md-6">
                 <textarea id="editor" class="form-control" v-model="rawMarkdown"></textarea>
             </div>
-            <div id="preview" class="col-xs-12 col-md-6">
+            <div id="preview" class="col-md-6">
                 <div class="panel panel-default">
                     <div class="panel-body">
                         <article class="markdown-body">
