--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <textarea id="editor" class="form-control" v-model="rawMarkdown"></textarea>
+                <textarea id="editor" class="form-control" v-model="rawMarkdown" stlye="resize: none;"></textarea>
             </div>
             <div id="preview" class="col-md-6">
                 <div class="panel panel-default">
