add min width to editor

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
             background-color: #f4f7f7;
         }
 
-        textarea {
-            resize: none;
-        }
-
         .header-text h4 {
             color: #454552;
         }
@@ -27,6 +23,7 @@
         #preview {
             height: 500px;
             max-height: 500px;
+            min-width: 100%;
             margin-bottom: 20px;
             margin-top: 20px;
         }
